--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       --accent1:#7a5bff;
       --accent2:#6aa3ff;
       --accent-yellow:#ffd36b;
-      --green1:#35d0a2;
+      --green1:#40d39a;
       --green2:#27b36f;
       --muted:#f6f6fb;
-      --outline: rgba(120,100,180,0.09);
+      --outline: rgba(120,100,180,0.08);
       --radius-lg:20px;
       --radius-md:12px;
       --shadow-strong: 0 18px 40px rgba(30,20,80,0.06);
@@ -91,10 +91,10 @@
     .placeholder{color:#98a0b3;text-align:center;font-size:14px;z-index:2}
     .upload img{max-width:100%;max-height:var(--max-upload-h);border-radius:10px;object-fit:contain;z-index:2}
 
-    /* button base - Slim and elegant */
+    /* button base - slim & consistent */
     .btn{
       display:inline-block;
-      padding:10px 20px;
+      padding:10px 18px;
       border-radius:12px;
       border:none;
       cursor:pointer;
@@ -113,10 +113,31 @@
     .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:80%;height:200%;transform:rotate(25deg);opacity:0.18;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .5s}
     .btn:hover:before{left:120%;opacity:0.45}
 
-    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 28px;border-radius:18px;}
-    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);color:#fff;min-width:170px;border-radius:14px;}
-    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffd06a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 10px 26px rgba(255,170,60,0.08)}
-    .btn-download{background:linear-gradient(90deg,var(--green1),var(--green2));padding:10px 34px;border-radius:16px;display:block;margin:16px auto 0;min-width:180px}
+    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 26px;border-radius:16px;}
+    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px;}
+    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 10px 26px rgba(255,170,60,0.08)}
+    /* glossy 3rd button: Download — stronger sheen + small border */
+    .btn-download{
+      background: linear-gradient(180deg,var(--green1),var(--green2));
+      padding:10px 34px;
+      border-radius:16px;
+      display:block;
+      margin:14px auto 0;
+      min-width:180px;
+      box-shadow: 0 12px 36px rgba(40,150,110,0.12);
+      border:2px solid rgba(0,0,0,0.06);
+    }
+    .btn-download:after{
+      /* top glossy shine */
+      content:'';
+      position:absolute;
+      left:0;right:0;top:0;
+      height:40%;
+      background: linear-gradient(180deg, rgba(255,255,255,0.45), rgba(255,255,255,0));
+      border-radius:16px 16px 0 0;
+      pointer-events:none;
+      mix-blend-mode:overlay;
+    }
 
     /* controls */
     .controls{display:flex;gap:12px;margin-top:12px;align-items:center}
@@ -125,13 +146,13 @@
       padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.06);background:#fff;width:100%;font-size:14px;
     }
 
-    /* buttons layout */
+    /* actions layout */
     .actions{display:flex;gap:12px;margin-top:14px;align-items:center;justify-content:space-between}
     .actions .left{flex:1}
     .download-row{text-align:center;margin-top:12px}
 
-    /* trials, progress and stop */
-    .footer{margin-top:18px;display:flex;flex-direction:column;gap:10px}
+    /* trials, progress and stop (placed under buttons) */
+    .footer{margin-top:12px;display:flex;flex-direction:column;gap:10px}
     .plan-row{display:flex;align-items:center;gap:12px}
     .plan-dot{width:12px;height:12px;background:#000;border-radius:4px}
     .trials-wrap{margin-left:auto;display:flex;align-items:center;gap:10px}
@@ -139,9 +160,9 @@
     .progress-wrap{width:160px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.03)}
     .progress-bar{height:100%;background:linear-gradient(90deg,#2ecc71,#27b36f);width:100%;transition:width .3s}
 
-    .status-pill{background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
+    .status-pill{margin-top:8px;background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
 
-    /* right result area: neat framed panel with inner border */
+    /* right result area: neat framed panel with inner border and centered content */
     .result-frame{
       width:100%;
       height:calc(100vh - 56px);
@@ -155,20 +176,22 @@
       justify-content:center;
     }
     .result-inner{
-      width:94%;
-      height:94%;
+      width:82%;
+      height:86%;
       border-radius:14px;
-      padding:14px;
+      padding:20px;
       border:1px solid rgba(120,100,180,0.06);
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
+      text-align:center;
+      flex-direction:column;
     }
-    .result-note{color:#98a0b3;font-size:16px;text-align:center}
+    .result-note{color:#98a0b3;font-size:16px;text-align:center;align-self:center}
     .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 16px 36px rgba(30,20,80,0.06)}
 
-    /* responsive */
+    /* small screens */
     @media (max-width:980px){
       .app{flex-direction:column;padding:18px;height:auto}
       .left{width:100%}
@@ -230,6 +253,7 @@
             <button id="downloadBtn" class="btn-download" disabled>Download</button>
           </div>
 
+          <!-- trials and plan under buttons -->
           <div class="footer">
             <div class="plan-row">
               <div class="plan-dot"></div>
@@ -339,7 +363,7 @@
       removeBtn.disabled = true;
       resultNote.style.display = 'none';
 
-      // simulate server
+      // simulated process (replace with real backend call)
       await new Promise(r=>setTimeout(r,1400));
 
       if (processedBlobUrl && processedBlobUrl !== uploadedBlobUrl) URL.revokeObjectURL(processedBlobUrl);
