--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       --green1:#40d39a;
       --green2:#27b36f;
       --muted:#f6f6fb;
-      --outline: rgba(120,100,180,0.10);
+      --outline-strong: rgba(120,100,180,0.14);
+      --outline-subtle: rgba(120,100,180,0.08);
       --radius-lg:18px;
       --radius-md:12px;
       --shadow-strong: 0 18px 40px rgba(30,20,80,0.06);
       --shadow-soft: 0 8px 20px rgba(30,20,80,0.04);
-      --max-upload-h:220px;
+      --max-upload-h:240px;
     }
 
     *{box-sizing:border-box}
@@ -31,8 +32,8 @@
       color:#111;
     }
 
-    /* layout */
-    .app{display:flex;gap:26px;padding:26px;height:100vh;align-items:flex-start;justify-content:flex-start}
+    /* Layout */
+    .app{display:flex;gap:26px;padding:28px;height:100vh;align-items:flex-start;justify-content:flex-start}
     .left{width:420px}
     .card{
       background:var(--panel);
@@ -40,59 +41,59 @@
       padding:18px;
       box-shadow:var(--shadow-strong);
       border:1px solid rgba(0,0,0,0.02);
-      outline: 1px solid rgba(120,100,180,0.03); /* subtle outer border */
+      outline:1px solid rgba(0,0,0,0.01);
     }
 
-    /* Brand (slightly smaller name per request) */
+    /* Brand (slightly smaller) */
     .brand{text-align:center;margin-bottom:8px}
     .brand h1{
-      font-size:38px; /* a bit smaller */
+      font-size:38px;
       margin:6px 0 4px 0;
       line-height:1;
       font-weight:900;
       color:transparent;
       background:linear-gradient(90deg,#ff8bd1,#9b6bff,#6aa3ff);
       -webkit-background-clip:text;background-clip:text;
-      letter-spacing:0.6px;
+      letter-spacing:0.4px;
     }
     .brand p{margin:0;color:#6b6b77;font-size:13px}
 
-    /* inner panel */
+    /* Inner panel */
     .inner{
       background: linear-gradient(180deg,#fff,#fbfbff);
       border-radius:14px;
       padding:16px;
       margin-top:6px;
-      border:1px solid var(--outline);
+      border:1px solid var(--outline-subtle);
       box-shadow: 0 8px 22px rgba(120,100,180,0.02);
     }
 
-    /* upload box - add clear outer border (box bahir border lines) */
+    /* Upload box with stronger outer border */
     .upload{
       position:relative;
       border-radius:12px;
       padding:18px;
-      min-height:240px;
+      min-height:260px;
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
       overflow:hidden;
-      border:1px solid rgba(120,100,180,0.08); /* outer border */
+      border:2px solid var(--outline-strong); /* stronger visible outer border */
     }
     .upload::after{
       content:'';
       position:absolute;
-      inset:12px;
+      inset:14px;
       border-radius:10px;
-      border:1.6px dashed rgba(120,100,180,0.10);
+      border:1.4px dashed var(--outline-subtle);
       pointer-events:none;
     }
     .upload input{display:none}
     .placeholder{color:#98a0b3;text-align:center;font-size:14px;z-index:2}
     .upload img{max-width:100%;max-height:var(--max-upload-h);border-radius:10px;object-fit:contain;z-index:2}
 
-    /* button base - slim & consistent, improved professional look */
+    /* Buttons - consistent slim professional look */
     .btn{
       display:inline-block;
       padding:10px 18px;
@@ -115,9 +116,10 @@
     .btn:hover:before{left:120%;opacity:0.45}
 
     .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 26px;border-radius:16px;}
-    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:180px;border-radius:14px;}
+    .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px;}
     .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 10px 26px rgba(255,170,60,0.08)}
-    /* glossy third button - stronger sheen + subtle border */
+
+    /* Download button: glossy & same font + white text */
     .btn-download{
       background: linear-gradient(180deg,var(--green1),var(--green2));
       padding:10px 34px;
@@ -126,7 +128,9 @@
       margin:14px auto 0;
       min-width:180px;
       box-shadow: 0 12px 36px rgba(40,150,110,0.12);
-      border:2px solid rgba(0,0,0,0.05);
+      border:2px solid rgba(0,0,0,0.04);
+      color:#ffffff; /* ensure white text */
+      font-weight:800; /* same weight as other buttons */
       position:relative;
     }
     .btn-download:after{
@@ -140,46 +144,46 @@
       mix-blend-mode:overlay;
     }
 
-    /* controls */
+    /* Controls */
     .controls{display:flex;gap:12px;margin-top:12px;align-items:center}
     .field{flex:1}
     select,input{
       padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.06);background:#fff;width:100%;font-size:14px;
     }
 
-    /* actions layout */
+    /* Actions layout */
     .actions{display:flex;gap:12px;margin-top:14px;align-items:center;justify-content:space-between}
     .actions .left{flex:1}
     .download-row{text-align:center;margin-top:12px}
 
-    /* footer: removed Your Plan; trials full set under buttons as requested */
+    /* Trials under buttons (full set) */
     .footer{margin-top:12px;display:flex;flex-direction:column;gap:10px}
     .trials-wrap{display:flex;align-items:center;gap:12px;justify-content:flex-start}
     .trials-oval{background:rgba(122,91,255,0.07);padding:8px 12px;border-radius:999px;font-weight:800;color:var(--accent1);font-size:13px;box-shadow:0 6px 16px rgba(122,91,255,0.04)}
-    .progress-wrap{width:200px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.03)}
+    .progress-wrap{width:220px;height:10px;background:#f4f4f8;border-radius:999px;overflow:hidden;border:1px solid rgba(0,0,0,0.03)}
     .progress-bar{height:100%;background:linear-gradient(90deg,#2ecc71,#27b36f);width:100%;transition:width .3s}
 
     .status-pill{margin-top:8px;background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
 
-    /* right result area: add outer border lines and center the inner text/image */
+    /* Result area: larger, outer & inner border lines, perfectly centered content */
     .result-frame{
       width:100%;
       height:calc(100vh - 56px);
       border-radius:var(--radius-lg);
-      padding:18px;
+      padding:24px;
       background:linear-gradient(180deg,#fff,#fbfbff);
       box-shadow:var(--shadow-soft);
-      border:1px solid rgba(120,100,180,0.06); /* outer border for result box */
+      border:2px solid var(--outline-strong); /* visible outer border line */
       display:flex;
       align-items:center;
       justify-content:center;
     }
     .result-inner{
-      width:78%;
-      height:82%;
+      width:86%;
+      height:88%;
       border-radius:14px;
-      padding:20px;
-      border:1px solid rgba(120,100,180,0.06); /* inner border line */
+      padding:24px;
+      border:2px solid var(--outline-subtle); /* inner border line */
       display:flex;
       align-items:center;
       justify-content:center;
@@ -187,15 +191,16 @@
       text-align:center;
       flex-direction:column;
     }
-    .result-note{color:#98a0b3;font-size:16px;text-align:center;align-self:center}
-    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 16px 36px rgba(30,20,80,0.06)}
+    .result-note{color:#98a0b3;font-size:18px;text-align:center;align-self:center}
+    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 18px 40px rgba(30,20,80,0.06)}
 
-    /* small screens */
+    /* responsive */
     @media (max-width:980px){
       .app{flex-direction:column;padding:18px;height:auto}
       .left{width:100%}
-      .result-frame{height:420px}
-      .brand h1{font-size:36px}
+      .result-frame{height:420px;padding:14px}
+      .result-inner{width:96%;height:84%}
+      .brand h1{font-size:32px}
     }
   </style>
 </head>
