--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
     :root{
       --bg:#fbf8ff;
       --panel:#ffffff;
-      --accent1:#6f5bff;
-      --accent2:#7fb8ff;
+      --accent1:#7a5bff;
+      --accent2:#6aa3ff;
       --accent-yellow:#ffd36b;
       --green1:#40d39a;
       --green2:#27b36f;
       --muted:#f6f6fb;
       --outline-strong: rgba(120,100,180,0.14);
       --outline-subtle: rgba(120,100,180,0.08);
-      --radius-lg:18px;
+      --radius-lg:20px;
       --radius-md:12px;
-      --shadow-strong: 0 18px 40px rgba(30,20,80,0.06);
-      --shadow-soft: 0 8px 20px rgba(30,20,80,0.04);
-      --max-upload-h:240px;
+      --shadow-strong: 0 20px 48px rgba(30,20,80,0.07);
+      --shadow-soft: 0 10px 28px rgba(30,20,80,0.05);
+      --max-upload-h:260px;
+      --content-width:420px;
     }
 
     *{box-sizing:border-box}
@@ -32,33 +33,33 @@
       color:#111;
     }
 
-    /* Layout */
-    .app{display:flex;gap:26px;padding:28px;height:100vh;align-items:flex-start;justify-content:flex-start}
-    .left{width:420px}
+    /* Page layout */
+    .app{display:flex;gap:28px;padding:28px;height:100vh;align-items:flex-start;justify-content:flex-start}
+    .left{width:var(--content-width)}
     .card{
       background:var(--panel);
       border-radius:var(--radius-lg);
-      padding:18px;
+      padding:20px;
       box-shadow:var(--shadow-strong);
       border:1px solid rgba(0,0,0,0.02);
-      outline:1px solid rgba(0,0,0,0.01);
+      outline:1px solid rgba(120,100,180,0.03); /* subtle outer line like sample */
     }
 
-    /* Brand (slightly smaller) */
+    /* Brand */
     .brand{text-align:center;margin-bottom:8px}
     .brand h1{
-      font-size:38px;
+      font-size:40px; /* slightly smaller */
       margin:6px 0 4px 0;
       line-height:1;
       font-weight:900;
       color:transparent;
       background:linear-gradient(90deg,#ff8bd1,#9b6bff,#6aa3ff);
       -webkit-background-clip:text;background-clip:text;
-      letter-spacing:0.4px;
+      letter-spacing:0.6px;
     }
     .brand p{margin:0;color:#6b6b77;font-size:13px}
 
-    /* Inner panel */
+    /* inner panel with outer border line and subtle shadow to match screenshot */
     .inner{
       background: linear-gradient(180deg,#fff,#fbfbff);
       border-radius:14px;
@@ -68,36 +69,36 @@
       box-shadow: 0 8px 22px rgba(120,100,180,0.02);
     }
 
-    /* Upload box with stronger outer border */
+    /* Upload box: visible outer border + dashed inner outline */
     .upload{
       position:relative;
       border-radius:12px;
-      padding:18px;
+      padding:20px;
       min-height:260px;
       display:flex;
       align-items:center;
       justify-content:center;
       background:#fff;
       overflow:hidden;
-      border:2px solid var(--outline-strong); /* stronger visible outer border */
+      border:2px solid var(--outline-strong); /* outer outline visible */
     }
     .upload::after{
       content:'';
       position:absolute;
-      inset:14px;
+      inset:16px;
       border-radius:10px;
-      border:1.4px dashed var(--outline-subtle);
+      border:2px dashed var(--outline-subtle); /* inner dashed like sample */
       pointer-events:none;
     }
     .upload input{display:none}
-    .placeholder{color:#98a0b3;text-align:center;font-size:14px;z-index:2}
+    .placeholder{color:#98a0b3;text-align:center;font-size:15px;z-index:2}
     .upload img{max-width:100%;max-height:var(--max-upload-h);border-radius:10px;object-fit:contain;z-index:2}
 
-    /* Buttons - consistent slim professional look */
+    /* Buttons - slim, consistent, 3d-ish */
     .btn{
       display:inline-block;
-      padding:10px 18px;
-      border-radius:12px;
+      padding:10px 20px;
+      border-radius:14px;
       border:none;
       cursor:pointer;
       font-weight:800;
@@ -106,46 +107,46 @@
       transition:transform .12s ease,box-shadow .12s ease,opacity .12s;
       font-size:15px;
       color:#fff;
-      box-shadow:0 8px 22px rgba(30,20,80,0.06);
+      box-shadow:0 10px 28px rgba(30,20,80,0.06);
       min-width:140px;
       text-align:center;
       white-space:nowrap;
     }
     .btn:active{transform:translateY(1px)}
-    .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:80%;height:200%;transform:rotate(25deg);opacity:0.18;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .5s}
-    .btn:hover:before{left:120%;opacity:0.45}
+    .btn:before{content:'';position:absolute;left:-40%;top:-60%;width:90%;height:220%;transform:rotate(25deg);opacity:0.22;background:linear-gradient(90deg,rgba(255,255,255,0.95),rgba(255,255,255,0.12));transition:all .6s ease}
+    .btn:hover:before{left:120%;opacity:0.6}
 
-    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 26px;border-radius:16px;}
+    .btn-upload{background:linear-gradient(90deg,var(--accent1),var(--accent2));padding:10px 28px;border-radius:18px;}
     .btn-remove{background:linear-gradient(90deg,#7fa3ff,#9fd0ff);min-width:170px;border-radius:14px;}
-    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 10px 26px rgba(255,170,60,0.08)}
-
-    /* Download button: glossy & same font + white text */
+    .btn-sub{background:linear-gradient(90deg,var(--accent-yellow),#ffcf5a);color:#111;min-width:120px;border-radius:14px;box-shadow:0 12px 34px rgba(255,170,60,0.10)}
+    /* Download: glossy 3rd button (shiny) */
     .btn-download{
       background: linear-gradient(180deg,var(--green1),var(--green2));
-      padding:10px 34px;
-      border-radius:16px;
+      padding:10px 36px;
+      border-radius:18px;
       display:block;
-      margin:14px auto 0;
-      min-width:180px;
-      box-shadow: 0 12px 36px rgba(40,150,110,0.12);
+      margin:16px auto 0;
+      min-width:190px;
+      box-shadow: 0 14px 40px rgba(40,150,110,0.12);
       border:2px solid rgba(0,0,0,0.04);
-      color:#ffffff; /* ensure white text */
-      font-weight:800; /* same weight as other buttons */
+      color:#fff;
+      font-weight:900;
       position:relative;
+      overflow:visible;
     }
     .btn-download:after{
       content:'';
       position:absolute;
-      left:0;right:0;top:0;
+      left:6px;right:6px;top:6px;
       height:36%;
-      background: linear-gradient(180deg, rgba(255,255,255,0.45), rgba(255,255,255,0));
-      border-radius:16px 16px 0 0;
+      background: linear-gradient(180deg, rgba(255,255,255,0.5), rgba(255,255,255,0));
+      border-radius:14px 14px 0 0;
       pointer-events:none;
       mix-blend-mode:overlay;
     }
 
     /* Controls */
-    .controls{display:flex;gap:12px;margin-top:12px;align-items:center}
+    .controls{display:flex;gap:12px;margin-top:14px;align-items:center}
     .field{flex:1}
     select,input{
       padding:10px;border-radius:10px;border:1px solid rgba(120,100,180,0.06);background:#fff;width:100%;font-size:14px;
@@ -156,7 +157,7 @@
     .actions .left{flex:1}
     .download-row{text-align:center;margin-top:12px}
 
-    /* Trials under buttons (full set) */
+    /* Trials & footer */
     .footer{margin-top:12px;display:flex;flex-direction:column;gap:10px}
     .trials-wrap{display:flex;align-items:center;gap:12px;justify-content:flex-start}
     .trials-oval{background:rgba(122,91,255,0.07);padding:8px 12px;border-radius:999px;font-weight:800;color:var(--accent1);font-size:13px;box-shadow:0 6px 16px rgba(122,91,255,0.04)}
@@ -165,25 +166,25 @@
 
     .status-pill{margin-top:8px;background:#0b0b0b;color:#fff;padding:12px;border-radius:12px;font-weight:700;box-shadow:0 8px 24px rgba(0,0,0,0.08)}
 
-    /* Result area: larger, outer & inner border lines, perfectly centered content */
+    /* RESULT PANEL - larger, centered, with visible outer & inner outlines (like example) */
     .result-frame{
       width:100%;
       height:calc(100vh - 56px);
-      border-radius:var(--radius-lg);
-      padding:24px;
+      border-radius:28px;
+      padding:28px;
       background:linear-gradient(180deg,#fff,#fbfbff);
       box-shadow:var(--shadow-soft);
-      border:2px solid var(--outline-strong); /* visible outer border line */
+      border:2px solid var(--outline-strong); /* visible outer outline like sample */
       display:flex;
       align-items:center;
       justify-content:center;
     }
     .result-inner{
-      width:86%;
-      height:88%;
-      border-radius:14px;
-      padding:24px;
-      border:2px solid var(--outline-subtle); /* inner border line */
+      width:92%;
+      height:92%;
+      border-radius:18px;
+      padding:18px;
+      border:2px dashed var(--outline-subtle); /* inner outline (dashed/subtle) */
       display:flex;
       align-items:center;
       justify-content:center;
@@ -191,14 +192,15 @@
       text-align:center;
       flex-direction:column;
     }
-    .result-note{color:#98a0b3;font-size:18px;text-align:center;align-self:center}
-    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 18px 40px rgba(30,20,80,0.06)}
 
-    /* responsive */
+    .result-note{color:#98a0b3;font-size:18px;text-align:center;align-self:center}
+    .result-img{max-width:100%;max-height:100%;object-fit:contain;border-radius:8px;display:none;box-shadow:0 20px 48px rgba(30,20,80,0.06)}
+
+    /* Responsive */
     @media (max-width:980px){
       .app{flex-direction:column;padding:18px;height:auto}
       .left{width:100%}
-      .result-frame{height:420px;padding:14px}
+      .result-frame{height:420px;padding:16px}
       .result-inner{width:96%;height:84%}
       .brand h1{font-size:32px}
     }
@@ -222,7 +224,7 @@
             </div>
           </label>
 
-          <div style="display:flex;justify-content:center;margin-top:14px">
+          <div style="display:flex;justify-content:center;margin-top:16px">
             <button id="uploadBtn" class="btn btn-upload">Upload Image</button>
           </div>
 
@@ -257,7 +259,6 @@
             <button id="downloadBtn" class="btn-download" disabled>Download</button>
           </div>
 
-          <!-- trials and progress under buttons -->
           <div class="footer">
             <div style="display:flex;align-items:center;gap:12px">
               <div class="trials-wrap">
@@ -284,10 +285,10 @@
   </div>
 
   <script>
-    // register service worker if available
+    // service worker registration (optional)
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('/service-worker.js').catch(()=>{/* ignore */});
 
-    // elements
+    // Elements
     const fileInput = document.getElementById('fileInput');
     const dropArea = document.getElementById('dropArea');
     const uploadContent = document.getElementById('uploadContent');
@@ -301,10 +302,10 @@
     const trialsCountEl = document.getElementById('trialsCount');
     const trialsBar = document.getElementById('trialsBar');
 
-    // single-click: uploadBtn triggers file input; label handles box click by default
+    // Single-click: upload button opens file dialog; label handles box click automatically
     uploadBtn.addEventListener('click', ()=> fileInput.click());
 
-    // drag/drop
+    // Drag/drop
     dropArea.addEventListener('dragover', e=>{ e.preventDefault(); dropArea.classList.add('hover'); });
     dropArea.addEventListener('dragleave', e=>{ e.preventDefault(); dropArea.classList.remove('hover'); });
     dropArea.addEventListener('drop', e=>{ e.preventDefault(); dropArea.classList.remove('hover'); if(e.dataTransfer.files.length) handleFile(e.dataTransfer.files[0]); });
@@ -357,7 +358,7 @@
       setStatus('Image ready');
     }
 
-    // remove background (demo) -> replace with server API later
+    // Remove background (demo): replace with server API later
     removeBtn.addEventListener('click', async ()=>{
       if(!uploadedBlobUrl){ alert('Please upload an image first.'); return; }
       if(trials <= 0){ alert('No trials left. Please subscribe.'); return; }
@@ -365,9 +366,10 @@
       removeBtn.disabled = true;
       resultNote.style.display = 'none';
 
-      // simulated process (replace with real backend call)
-      await new Promise(r=>setTimeout(r,1400));
+      // simulate server processing (replace with real fetch)
+      await new Promise(r=>setTimeout(r,1500));
 
+      // demo: reuse uploaded image as processed result
       if (processedBlobUrl && processedBlobUrl !== uploadedBlobUrl) URL.revokeObjectURL(processedBlobUrl);
       processedBlobUrl = uploadedBlobUrl;
       resultPreview.src = processedBlobUrl;
@@ -377,10 +379,11 @@
       trials = Math.max(0, trials - 1);
       updateTrialsUI();
 
-      setStatus('Done'); removeBtn.disabled = false;
+      setStatus('Done');
+      removeBtn.disabled = false;
     });
 
-    // download
+    // Download
     downloadBtn.addEventListener('click', ()=>{
       if(!resultPreview.src) return;
       const a = document.createElement('a');
@@ -389,7 +392,7 @@
       a.click();
     });
 
-    // subscribe demo
+    // Subscribe (demo)
     subscribeBtn.addEventListener('click', ()=> { alert('Subscribe flow (demo).'); });
 
     // init
